copyright creation date

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          &copy; {{ site.time | date: "%Y" }}, Jason Kilpatrick, All Rights Reserved
+          &copy; 2016, Jason Kilpatrick, All Rights Reserved
           <div class="right">
 
             {% for media in site.social_media %}
